--- a/app/views/dashboard.erb
+++ b/app/views/dashboard.erb
@@ -1,3 +1,4 @@
 <h1>Robo-Breakdown</h1>
-<h3><a href= '/robots'> Robo-Directory</h3>
-<h3><a href= "/robots/new">Robo-Creation</h3>
+<h3><a href= '/robots' value="directory"> Robo-Directory</a></h3>
+<h3><a href= "/robots/new" value="creation">Robo-Creation</a></h3>
+<p>Average Age: <%=@average_age %></p>
