--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -1,8 +1,9 @@
 <img src = <%=@robot.avatar%></br>
+<h2>ROBOT ID: <%=@robot.id%> </h2>
 <h1> <%= @robot.name %> </h1>
 <p> <%= @robot.city %></p>
 <p> <%= @robot.state %></p>
-<p> <%= @robot.birthdate %></p>
-<p> <%= @robot.date_hired %></p>
+<p> <%= @robot.birthdate.strftime('%b %d %Y') %></p>
+<h1> <%= @robot.date_hired.strftime('%b %d %Y') %></h1>
 <p> <%= @robot.department %></p>
 <a href='/robots'>Robo-Directory</a>
